Fix calendar tooltip z-index

--- a/assets/sass/calendar.scss
+++ b/assets/sass/calendar.scss
@@ -134,6 +134,7 @@
   color: white;
   border-radius: 0 1rem 1rem 1rem;
   padding: 0.5rem;
+  z-index: 1000;
 }
 
 .calendar-date-tooltip p {
